@@ -15,4 +15,8 @@
 
 #include <sel4/sel4_arch/mapping.h>
 
+#define SEL4_MAPPING_LOOKUP_NO_EPTPDPT 39
+#define SEL4_MAPPING_LOOKUP_NO_EPTPD 30
+#define SEL4_MAPPING_LOOKUP_NO_EPTPT 21
+
 #endif
